--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 "Battlin' Boxer" monsters
-    If a "Battlin' Boxer" monster(s) you control would be destroyed by battle or by a card effect, you can detach 1 Xyz Material from this card instead of destroying 1 of those monsters. When an Xyz Material(s) is detached from this card: This card gains 800 ATK.
+    If a "Battlin' Boxer" monster(s) you control would be destroyed by battle or card effect, you can detach 1 material from this card instead of destroying 1 of those monsters. If a material(s) is detached from this card: This card gains 800 ATK.
   de: |-
     2 „Unermüdlicher Boxer“-Monster der Stufe 4
     Falls ein oder mehr „Unermüdlicher Boxer“-Monster, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, kannst du 1 Xyz-Material von dieser Karte abhängen, statt 1 der Monster zu zerstören. Falls ein oder mehr Xyz-Material von dieser Karte abgehängt werden: Diese Karte erhält 800 ATK.
@@ -54,7 +54,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerLeadYoke-MP14-EN-R-1E.png
+  image: BattlinBoxerLeadYoke-LD10-EN-R-1E.png
 sets:
   en:
   - set_number: LTGY-EN050
