--- a/data/cards/35537251.yaml
+++ b/data/cards/35537251.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 燃烧拳击手 假想敌拳手
 text:
   en: |-
-    During your Main Phase: You can detach 1 Xyz Material from a "Battlin' Boxer" Xyz Monster you control, and if you do, Special Summon this card from your hand. You can only use this effect of "Battlin' Boxer Shadow" once per turn.
+    During your Main Phase: You can detach 1 material from a "Battlin' Boxer" Xyz Monster you control, and if you do, Special Summon this card from your hand. You can only use this effect of "Battlin' Boxer Shadow" once per turn.
   de: |-
     Während deiner Main Phase: Du kannst 1 Xyz-Material von einem „Unermüdlicher Boxer“-Xyz-Monster abhängen, das du kontrollierst, und falls du dies tust, beschwöre diese Karte als Spezialbeschwörung von deiner Hand. Du kannst diesen Effekt von „Unermüdlicher Boxer Schatten“ nur einmal pro Spielzug verwenden.
   es: |-
@@ -43,7 +43,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerShadow-WSUP-EN-SR-1E.png
+  image: BattlinBoxerShadow-LD10-EN-R-1E.png
 sets:
   en:
   - set_number: WSUP-EN013
