--- a/data/cards/42175079.yaml
+++ b/data/cards/42175079.yaml
@@ -15,6 +15,7 @@ name:
   zh-CN: 大喷火
 text:
   en: |-
+    (This card is not treated as a "Volcanic" card.)
     During your End Phase, if you control "Jurassic World": Destroy all cards on the field.
   de: |-
     Während deiner End Phase, falls du „Jurassische Welt“ kontrollierst: Zerstöre alle Karten auf dem Spielfeld.
@@ -37,7 +38,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: VolcanicEruption-LCJW-EN-C-1E.png
+  image: VolcanicEruption-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: SD09-EN030
