--- a/data/cards/52155219.yaml
+++ b/data/cards/52155219.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 转生炎兽之炎阵
 text:
   en: |-
-    Activate 1 of these effects.
+    Activate 1 of these effects;
     ● Add 1 "Salamangreat" monster from your Deck to your hand.
     ● Target 1 "Salamangreat" Link Monster you control that was Link Summoned using a monster with its same name as material; that Link Monster is unaffected by monster effects this turn, except its own.
     You can only activate 1 "Salamangreat Circle" per turn.
@@ -63,7 +63,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatCircle-BLCR-EN-UR-1E.png
+  image: SalamangreatCircle-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: SDSB-EN023
