--- a/data/cards/52198054.yaml
+++ b/data/cards/52198054.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 烈焰加农炮弹匣
 text:
   en: |-
-    This card's name becomes "Tri-Blaze Accelerator" while in the Spell & Trap Zone. During either player's Main Phase: You can send 1 "Volcanic" card from your hand to the Graveyard, and if you do, draw 1 card. You can only use this effect of "Blaze Accelerator Reload" once per turn. During either player's Main Phase: You can banish this card from your Graveyard; send 1 "Volcanic" card from your Deck to the Graveyard.
+    This card's name becomes "Tri-Blaze Accelerator" while in the Spell & Trap Zone. During the Main Phase: You can send 1 "Volcanic" card from your hand to the GY, and if you do, draw 1 card. You can only use this effect of "Blaze Accelerator Reload" once per turn. During the Main Phase: You can banish this card from your GY; send 1 "Volcanic" card from your Deck to the GY.
   de: |-
     Der Name dieser Karte wird zu „Dreifacher Glutbeschleuniger“, solange sie in der Zauber- & Fallenzone liegt. Während der Main Phase eines beliebigen Spielers: Du kannst 1 „Vulkanisch“-Karte von deiner Hand auf den Friedhof legen und falls du dies tust, ziehe 1 Karte. Du kannst diesen Effekt von „Glutbeschleuniger nachladen“ nur einmal pro Spielzug verwenden. Während der Main Phase eines beliebigen Spielers: Du kannst diese Karte von deinem Friedhof verbannen; lege 1 „Vulkanisch“-Karte von deinem Deck auf den Friedhof.
   es: |-
@@ -39,7 +39,7 @@ series:
 - Blaze Accelerator
 images:
 - index: 1
-  image: BlazeAcceleratorReload-SECE-EN-C-1E.png
+  image: BlazeAcceleratorReload-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: SECE-EN077
