--- a/data/cards/68144350.yaml
+++ b/data/cards/68144350.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 燃烧拳击手 左右开弓拳手
 text:
   en: |-
-    When this card is Normal Summoned: You can target 1 "Battlin' Boxer" monster in your Graveyard; Special Summon that target. You cannot Special Summon any monsters during the turn you activate this effect, except "Battlin' Boxer" monsters.
+    When this card is Normal Summoned: You can target 1 "Battlin' Boxer" monster in your GY; Special Summon it. You cannot Special Summon any monsters during the turn you activate this effect, except "Battlin' Boxer" monsters.
   de: |-
     Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 „Unermüdlicher Boxer“-Monster in deinem Friedhof wählen; beschwöre das gewählte Ziel als Spezialbeschwörung. Du kannst während des Spielzugs, in dem du diesen Effekt aktivierst, keine Monster als Spezialbeschwörung beschwören, außer „Unermüdlicher Boxer“-Monstern.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerSwitchitter-MP14-EN-C-1E.png
+  image: BattlinBoxerSwitchitter-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: LTGY-EN019
