--- a/data/cards/76589815.yaml
+++ b/data/cards/76589815.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 3 monsters
-    All monsters your opponent controls must attack, if able. While you control another "Battlin' Boxer" monster, your opponent cannot target this card for attacks. When an attack is declared involving another "Battlin' Boxer" monster you control: You can detach 2 Xyz Materials from this card; look at your opponent's hand, then Set 1 Spell Card from their hand to your side of the field.
+    All monsters your opponent controls must attack, if able. While you control another "Battlin' Boxer" monster, your opponent's monsters cannot target this card for attacks. When an attack is declared involving another "Battlin' Boxer" monster you control: You can detach 2 materials from this card; look at your opponent's hand, then Set 1 Spell from their hand to your field.
   de: |-
     2 Monster der Stufe 3
     Alle Monster, die dein Gegner kontrolliert, müssen angreifen, falls möglich. Solange du ein anderes „Unermüdlicher Boxer“-Monster kontrollierst, kann dein Gegner diese Karte nicht als Ziel für Angriffe wählen. Wenn ein Angriff deklariert wird, an dem ein anderes „Unermüdlicher Boxer“-Monster beteiligt ist, das du kontrollierst: Du kannst 2 Xyz-Material von dieser Karte abhängen; sieh dir die Hand deines Gegners an, dann setze 1 Zauberkarte von seiner Hand auf deine Spielfeldseite.
@@ -52,7 +52,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerCheatCommissioner-MP14-EN-R-1E.png
+  image: BattlinBoxerCheatCommissioner-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: SHSP-EN049
