--- a/data/cards/79867938.yaml
+++ b/data/cards/79867938.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 燃烧拳击手 护头拳手
 text:
   en: |-
-    When this card is Normal Summoned: You can send 1 "Battlin' Boxer" monster from your Deck to the Graveyard. Once per turn, this face-up Attack Position card cannot be destroyed by battle.
+    When this card is Normal Summoned: You can send 1 "Battlin' Boxer" monster from your Deck to the GY. The first time this Attack Position card would be destroyed by battle each turn, it is not destroyed.
   de: |-
     Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 „Unermüdlicher Boxer“-Monster von deinem Deck auf den Friedhof legen. Einmal pro Spielzug kann diese Karte in offener Angriffsposition nicht durch Kampf zerstört werden.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerHeadgeared-MP14-EN-C-1E.png
+  image: BattlinBoxerHeadgeared-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: LTGY-EN016
