--- a/data/cards/85121942.yaml
+++ b/data/cards/85121942.yaml
@@ -16,8 +16,8 @@ name:
 text:
   en: |-
     4 Level 5 monsters
-    When this card destroys an opponent's monster by battle and sends it to the Graveyard: Inflict damage to your opponent equal to half the destroyed monster's original ATK. If this card has "Number 105: Battlin' Boxer Star Cestus" as an Xyz Material, it gains this effect.
-    ● Once per turn: You can detach 1 Xyz Material from this card, then target 1 monster your opponent controls; destroy it, and if you do, inflict damage to your opponent equal to the destroyed monster's ATK on the field.
+    If this card destroys an opponent's monster by battle and sends it to the GY: Inflict damage to your opponent equal to half the destroyed monster's original ATK. If this card has "Number 105: Battlin' Boxer Star Cestus" as material, it gains this effect.
+    ● Once per turn: You can detach 1 material from this card, then target 1 monster your opponent controls; destroy it, and if you destroyed a face-up monster, inflict damage to your opponent equal to the ATK that monster had on the field.
   de: |-
     4 Monster der Stufe 5
     Wenn diese Karte ein Monster deines Gegners durch Kampf zerstört und auf den Friedhof legt: Füge deinem Gegner Schaden in Höhe der Hälfte der Grund-ATK des zerstörten Monsters zu. Falls diese Karte „Nummer 105: Unermüdlicher Boxer Star Cestus“ als Xyz-Material hat, erhält sie diesen Effekt.
@@ -67,7 +67,7 @@ series:
 - Chaos
 images:
 - index: 1
-  image: NumberC105BattlinBoxerCometCestus-MP14-EN-UR-1E.png
+  image: NumberC105BattlinBoxerCometCestus-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: LTGY-EN052
