--- a/data/cards/86049351.yaml
+++ b/data/cards/86049351.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 最后反击
 text:
   en: |-
-    When an attack is declared involving a "Battlin' Boxer" monster you control and an opponent's monster: Negate the attack, and if you do, send that monster you control to the Graveyard, then 1 "Battlin' Boxer" monster you control (in Attack Position, if you declared the attack) gains ATK equal to the original ATK of that opponent's monster, also proceed to damage calculation using those monsters. Then, you take damage equal to the amount of ATK gained from this effect.
+    When an attack is declared involving a "Battlin' Boxer" monster you control and an opponent's monster: Negate the attack, and if you do, send that monster you control to the GY, then 1 "Battlin' Boxer" monster you control (in Attack Position, if you declared the attack) gains ATK equal to the original ATK of that opponent's monster, also proceed to damage calculation using those monsters. Then, you take damage equal to the amount of ATK gained from this effect.
   de: |-
     Wenn ein Angriff deklariert wird, an dem ein „Unermüdlicher Boxer“-Monster, das du kontrollierst, und ein Monster deines Gegners beteiligt sind: Annulliere den Angriff und falls du dies tust, lege das Monster, das du kontrollierst, auf den Friedhof, dann erhält 1 „Unermüdlicher Boxer“-Monster (in Angriffsposition, falls du den Angriff deklariert hast), das du kontrollierst, ATK in Höhe der Grund-ATK des Monsters deines Gegners, zusätzlich springe zur Schadensberechnung und verwende dazu die Monster. Dann erhältst du Schaden in Höhe der durch diesen Effekt erhaltenen ATK.
   es: |-
@@ -42,7 +42,7 @@ images:
   image: LastCounter-PRIO-JP-C.png
   illustration: LastCounter-MADU-JP-VG-artwork.png
 - index: '1.1'
-  image: LastCounter-PRIO-EN-C-1E.png
+  image: LastCounter-LD10-EN-C-1E.png
   illustration: LastCounter-MADU-EN-VG-artwork.png
 sets:
   en:
