--- a/data/cards/86325573.yaml
+++ b/data/cards/86325573.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 燃烧拳击手 大绷带拳手
 text:
   en: |-
-    Once per turn, this card cannot be destroyed by battle. Once per turn: You can target 1 "Battlin' Boxer" monster in your Graveyard, or 1 of your banished "Battlin' Boxer" monsters, that has a Level; all "Battlin' Boxer" monsters you currently control become that monster's current Level.
+    The first time this card would be destroyed by battle each turn, it is not destroyed. Once per turn: You can target 1 of your "Battlin' Boxer" monsters that is banished or in your GY, that has a Level; all "Battlin' Boxer" monsters you currently control become that monster's current Level.
   de: |-
     Einmal pro Spielzug kann diese Karte nicht durch Kampf zerstört werden. Einmal pro Spielzug: Du kannst 1 „Unermüdlicher Boxer“-Monster in deinem Friedhof oder 1 deiner verbannten „Unermüdlicher Boxer“-Monster wählen, das eine Stufe hat; die Stufe aller „Unermüdlicher Boxer“-Monster, die du derzeit kontrollierst, wird die gleiche wie die derzeitige Stufe des Monsters.
   es: |-
@@ -43,7 +43,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerBigBandage-PRIO-EN-C-1E.png
+  image: BattlinBoxerBigBandage-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: PRIO-EN008
