--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -2796,7 +2796,7 @@ Elemental HERO:
   zh-CN: 元素－英雄
 Cyber Dragon:
   de: Cyber Drache
-  es: Ciber Dragon
+  es: Ciber Dragón
   fr: Cyber Dragon
   it: Cyber Drago
   pt: Dragão Cibernético
