--- a/data/cards/32543380.yaml
+++ b/data/cards/32543380.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 火山恶魔
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must first be Special Summoned (from your hand) by sending 1 "Tri-Blaze Accelerator" you control to the GY. During your opponent's Battle Phase, Attack Position monsters your opponent controls must attack this card, if able. When this card destroys a monster by battle and sends it to the GY: Destroy as many monsters your opponent controls as possible, and if you do, inflict 500 damage to your opponent for each monster destroyed by this effect.
+    Cannot be Normal Summoned/Set. Must first be Special Summoned (from your hand) by sending 1 "Tri-Blaze Accelerator" you control to the GY. During your opponent's Battle Phase, all Attack Position monsters your opponent controls that can attack must attack this card. If this card destroys a monster by battle and sends it to the GY: Destroy as many monsters your opponent controls as possible, and if you do, inflict 500 damage to your opponent for each monster destroyed by this effect.
   de: |-
     Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss erst als Spezialbeschwörung (von deiner Hand) beschworen werden, indem du 1 „Dreifacher Glutbeschleuniger“, den du kontrollierst, auf den Friedhof legst. Während der Battle Phase deines Gegners müssen Monster in Angriffsposition, die dein Gegner kontrolliert, diese Karte angreifen, falls möglich. Wenn diese Karte ein Monster durch Kampf zerstört und auf den Friedhof legt: Zerstöre so viele Monster, die dein Gegner kontrolliert, wie möglich und falls du dies tust, füge deinem Gegner für jedes durch diesen Effekt zerstörte Monster 500 Schaden zu.
   es: |-
@@ -43,7 +43,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicDoomfire-SGX1-EN-C-1E.png
+  image: VolcanicDoomfire-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: FOTB-EN008
