--- a/data/cards/59627393.yaml
+++ b/data/cards/59627393.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 4 monsters
-    During either player's Battle Step, if a "Battlin' Boxer" monster you control battles an opponent's monster: You can detach 1 Xyz Material from this card; negate the effects of the opponent's monster until the end of the turn, that monster you control cannot be destroyed by that battle, also your opponent takes any battle damage you would have taken from that battle.
+    Once per Chain, during the Battle Step, if your "Battlin' Boxer" monster battles an opponent's monster (Quick Effect): You can detach 1 material from this card; negate the effects of that opponent's monster while it is face-up until the end of this turn, that monster you control cannot be destroyed by that battle, also your opponent takes any battle damage you would have taken from that battle.
   de: |-
     3 Monster der Stufe 4
     Während des Battle Steps eines beliebigen Spielers, falls ein „Unermüdlicher Boxer“-Monster, das du kontrollierst, gegen ein Monster deines Gegners kämpft: Du kannst 1 Xyz-Material von dieser Karte abhängen; annulliere bis zum Ende des Spielzugs die Effekte des Monsters deines Gegners, das Monster, das du kontrollierst, kann durch den Kampf nicht zerstört werden und dein Gegner erhält den Kampfschaden, den du aus dem Kampf erhalten hättest.
@@ -57,7 +57,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: Number105BattlinBoxerStarCestus-MP14-EN-SR-1E.png
+  image: Number105BattlinBoxerStarCestus-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: LTGY-EN051
