--- a/data/cards/63014935.yaml
+++ b/data/cards/63014935.yaml
@@ -15,8 +15,7 @@ name:
   zh-CN: 火山女王
 text:
   en: |-
-    This card cannot be Normal Summoned or Set. This card can only be Special Summoned from your hand to your opponent's side of the field by Tributing 1 monster your opponent controls. If you Special Summon this card, you cannot Normal Summon or Set this turn.
-    Once per turn, you can send 1 other card you control to the Graveyard to inflict 1000 damage to your opponent. During your End Phase, either Tribute 1 other monster or take 1000 damage.
+    Cannot be Normal Summoned/Set. Must first be Special Summoned (from your hand) to your opponent's field by Tributing 1 monster they control. You cannot Normal Summon/Set the turn you Special Summon this card. Once per turn: You can send 1 other card you control to the GY; inflict 1000 damage to your opponent. Once per turn, during your End Phase: Tribute 1 other monster or take 1000 damage.
   de: |-
     Diese Karte kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Diese Karte kann nur als Spezialbeschwörung von deiner Hand auf die Spielfeldseite deines Gegners beschworen werden, indem du 1 Monster als Tribut anbietest, das dein Gegner kontrolliert. Falls du diese Karte als Spezialbeschwörung beschwörst, kannst du in diesem Spielzug kein Monster als Normalbeschwörung beschwören oder setzen. Einmal pro Spielzug kannst du 1 andere Karte, die du kontrollierst, auf den Friedhof legen, um deinem Gegner 1000 Schaden zuzufügen. Während deiner End Phase, biete entweder 1 anderes Monster als Tribut an oder nimm 1000 Schaden.
   es: |-
@@ -43,7 +42,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicQueen-LODT-EN-C-UE.png
+  image: VolcanicQueen-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: LODT-EN005
