--- a/data/cards/65741786.yaml
+++ b/data/cards/65741786.yaml
@@ -58,7 +58,7 @@ images:
   illustration: IPMasquerena-MADU-EN-VG-artwork.png
 - index: 2
   image: IPMasquerena-MGED-EN-PGR-1E-AA.png
-  illustration: IPMasquerena-OW-2.png
+  illustration: IPMasquerena-MADU-EN-VG-artwork-2.png
 sets:
   en:
   - set_number: CHIM-EN049
