--- a/data/cards/69750546.yaml
+++ b/data/cards/69750546.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 火山鹿弹
 text:
   en: |-
-    If this card is sent to the Graveyard: Inflict 500 damage to your opponent. If this card is sent to the Graveyard by the effect of a "Blaze Accelerator" card: You can send 2 "Volcanic Scattershots" from your hand and/or Deck to the Graveyard; destroy all monsters your opponent controls.
+    If this card is sent to the GY: Inflict 500 damage to your opponent. If this card is sent to the GY by the effect of a "Blaze Accelerator" card: You can send 2 "Volcanic Scattershots" from your hand and/or Deck to the GY; destroy all monsters your opponent controls.
   de: |-
     Falls diese Karte auf den Friedhof gelegt wird: Füge deinem Gegner 500 Schaden zu. Falls diese Karte durch den Effekt einer „Glutbeschleuniger“-Karte auf den Friedhof gelegt wird: Du kannst 2 „Vulkanischer Streuschuss“ von deiner Hand und/oder deinem Deck auf den Friedhof legen; zerstöre alle Monster, die dein Gegner kontrolliert.
   es: |-
@@ -43,7 +43,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicScattershot-AP07-EN-C-UE.png
+  image: VolcanicScattershot-LD10-EN-C-1E.png
 sets:
   en:
   - set_number: FOTB-EN010
