--- a/data/cards/71921856.yaml
+++ b/data/cards/71921856.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    Once per turn: You can attach 1 "Battlin' Boxer" monster from your hand or Graveyard to this card as an Xyz Material. This card gains 100 ATK for each Xyz Material attached to it. When this card you control is destroyed by your opponent's card (by battle or card effect) and sent to your Graveyard: You can target Level 4 or lower "Battlin' Boxer" monsters in your Graveyard, up to the number of Xyz Materials this card had on the field; Special Summon those targets.
+    Gains 100 ATK for each material attached to it. Once per turn, during your Main Phase: You can attach 1 "Battlin' Boxer" monster from your hand or GY to this card as material. When this card in your possession is destroyed by your opponent's card and sent to your GY while it has material: You can target Level 4 or lower "Battlin' Boxer" monsters in your GY, up to the number of materials this card had on the field; Special Summon them.
   de: |-
     2 Monster der Stufe 4
     Einmal pro Spielzug: Du kannst 1 „Unermüdlicher Boxer“-Monster von deiner Hand oder deinem Friedhof als Xyz-Material an diese Karte anhängen. Diese Karte erhält 100 ATK für jedes an sie angehängte Xyz-Material. Wenn diese Karte, die du kontrollierst, durch eine Karte deines Gegners (durch Kampf oder einen Karteneffekt) zerstört und auf deinen Friedhof gelegt wird: Du kannst „Unermüdlicher Boxer“-Monster der Stufe 4 oder niedriger in deinem Friedhof wählen, bis zur Anzahl des Xyz-Materials, das diese Karte auf dem Spielfeld hatte; beschwöre die gewählten Ziele als Spezialbeschwörung.
@@ -55,7 +55,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: Number79BattlinBoxerNovaKaiser-WSUP-EN-SR-1E.png
+  image: Number79BattlinBoxerNovaKaiser-LD10-EN-R-1E.png
 sets:
   en:
   - set_number: WSUP-EN014
