--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -2808,7 +2808,7 @@
   zh-CN: 元素－英雄
 - en: Cyber Dragon
   de: Cyber Drache
-  es: Ciber Dragon
+  es: Ciber Dragón
   fr: Cyber Dragon
   it: Cyber Drago
   pt: Dragão Cibernético
