--- a/data/rush/19283.yaml
+++ b/data/rush/19283.yaml
@@ -34,7 +34,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地の「フュージョン」または「パワー・ボンド」１枚を選んで手札に加える。その後、自分の墓地の「ジョインテック・スパイクセンチビード」１体を選んで自分フィールドに表側表示で特殊召喚できる。
+    自分の墓地の「フュージョン」または「パワー・ボンド」１枚を選んで手札に加える。その後、自分の墓地の「ジョインテック・スパイクセンチピード」１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
