--- a/data/rush/19293.yaml
+++ b/data/rush/19293.yaml
@@ -34,13 +34,13 @@ requirement:
   it:
   pt:
   ja: |-
-    マキシマムモード：手札のモンスター（炎属性または炎族）１体を墓地へ発動できる。
+    マキシマムモード：手札のモンスター（炎属性または炎族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Inflict 1000 damage to your opponent. Also, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    Inflict 1000 damage to your opponent. Then, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
