--- a/data/rush/19321.yaml
+++ b/data/rush/19321.yaml
@@ -46,14 +46,14 @@ atk: 3000
 def: 2500
 materials:
   en: |-
-    "Jointech Spike Centipede" + "Jointech Arc Scorpio"
+    "Jointech Arc Scorpio" + "Jointech Spike Centipede"
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    「ジョインテック・スパイクセンチピード」＋「ジョインテック・アークスコーピオ」
+    「ジョインテック・アークスコーピオ」＋「ジョインテック・スパイクセンチピード」
   ko:
   zh-TW:
   zh-CN:
