--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -4978,6 +4978,18 @@
   ko_rr: Booksu
   zh-TW:
   zh-CN:
+- en: Yubel
+  de: Yubel
+  es: Yubel
+  fr: Yubel
+  it: Yubel
+  pt: Yubel
+  ja: ユベル
+  ja_romaji: Yuberu
+  ko: 유벨
+  ko_rr: Yubel
+  zh-TW:
+  zh-CN:
 - en: Dual Avatar
   de: Doppelavatar
   es: Avatar Doble
