--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -4966,6 +4966,18 @@ Crystal Beast:
   ko_rr: Booksu
   zh-TW:
   zh-CN:
+Yubel:
+  de: Yubel
+  es: Yubel
+  fr: Yubel
+  it: Yubel
+  pt: Yubel
+  ja: ユベル
+  ja_romaji: Yuberu
+  ko: 유벨
+  ko_rr: Yubel
+  zh-TW:
+  zh-CN:
 Dual Avatar:
   de: Doppelavatar
   es: Avatar Doble
