--- a/data/rush/19314.yaml
+++ b/data/rush/19314.yaml
@@ -47,6 +47,7 @@ def: 1000
 images:
 - index: 1
   image: RisingLightAngelEsser-RDKP14-JP-SR.png
+  illustration: RisingLightAngelEsser-OW.png
 - index: 2
   image: RisingLightAngelEsser-RDKP14-JP-ScR-AA.png
 sets:
