--- a/data/cards/11654067.yaml
+++ b/data/cards/11654067.yaml
@@ -41,7 +41,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: FireEjection-DP28-JP-R.png
+  image: FireEjection-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN022
@@ -74,6 +74,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 924872
