--- a/data/cards/11962031.yaml
+++ b/data/cards/11962031.yaml
@@ -38,7 +38,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatofFire-DP28-JP-UR.png
+  image: SalamangreatofFire-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN001
@@ -72,6 +72,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 943090
