--- a/data/cards/58143766.yaml
+++ b/data/cards/58143766.yaml
@@ -42,7 +42,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicEmission-DP28-JP-SR.png
+  image: VolcanicEmission-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN023
@@ -76,6 +76,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 936592
