--- a/data/cards/83293635.yaml
+++ b/data/cards/83293635.yaml
@@ -33,7 +33,7 @@ series:
 - Seventh
 images:
 - index: 1
-  image: SeventhForce-DP28-JP-UR.png
+  image: SeventhForce-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN037
@@ -67,6 +67,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934371
