--- a/data/cards/94381039.yaml
+++ b/data/cards/94381039.yaml
@@ -171,7 +171,7 @@ sets:
     rarities:
     - Ultra Rare
   ja:
-  - set_number: LODT-EN024
+  - set_number: LODT-JP024
     set_name: Light of Destruction
     rarities:
     - Super Rare
