--- a/data/cards/10140443.yaml
+++ b/data/cards/10140443.yaml
@@ -43,7 +43,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatBurstGryphon-DP28-JP-SR.png
+  image: SalamangreatBurstGryphon-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN004
@@ -77,6 +77,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934313
