--- a/data/cards/10300821.yaml
+++ b/data/cards/10300821.yaml
@@ -48,7 +48,7 @@ series:
 - Number C
 images:
 - index: 1
-  image: NumberC79BattlinBoxerGeneralKaiser-DP28-JP-UR.png
+  image: NumberC79BattlinBoxerGeneralKaiser-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN035
@@ -82,6 +82,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 903929
