--- a/data/cards/11522479.yaml
+++ b/data/cards/11522479.yaml
@@ -41,7 +41,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerUppercutter-DP28-JP-R.png
+  image: BattlinBoxerUppercutter-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN032
@@ -74,6 +74,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 903926
