--- a/data/cards/19027895.yaml
+++ b/data/cards/19027895.yaml
@@ -34,7 +34,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatRevive-DP28-JP-R.png
+  image: SalamangreatRevive-LD10-EN-R-1E.png
 sets:
   en:
   - set_number: LD10-EN007
@@ -67,6 +67,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934347
