--- a/data/cards/19688343.yaml
+++ b/data/cards/19688343.yaml
@@ -40,7 +40,7 @@ series:
 - Counter
 images:
 - index: 1
-  image: BattlinBoxingCrossCounter-DP28-JP-R.png
+  image: BattlinBoxingCrossCounter-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN038
@@ -73,6 +73,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 903931
