--- a/data/cards/22411609.yaml
+++ b/data/cards/22411609.yaml
@@ -38,7 +38,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicTrooper-DP28-JP-SR.png
+  image: VolcanicTrooper-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN019
@@ -72,6 +72,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 924867
