--- a/data/cards/46804536.yaml
+++ b/data/cards/46804536.yaml
@@ -45,7 +45,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerKingDempsey-DP28-JP-SR.png
+  image: BattlinBoxerKingDempsey-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN036
@@ -79,6 +79,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 903930
