--- a/data/cards/47921178.yaml
+++ b/data/cards/47921178.yaml
@@ -38,7 +38,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerChiefSecond-DP28-JP-R.png
+  image: BattlinBoxerChiefSecond-LD10-EN-R-1E.png
 sets:
   en:
   - set_number: LD10-EN033
@@ -71,6 +71,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 903927
