--- a/data/cards/57134592.yaml
+++ b/data/cards/57134592.yaml
@@ -46,7 +46,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatRagingPhoenix-DP28-JP-UR.png
+  image: SalamangreatRagingPhoenix-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN005
@@ -80,6 +80,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934312
