--- a/data/cards/57357130.yaml
+++ b/data/cards/57357130.yaml
@@ -38,7 +38,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatWeasel-DP28-JP-SR.png
+  image: SalamangreatWeasel-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN002
@@ -72,6 +72,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934343
