--- a/data/cards/59805313.yaml
+++ b/data/cards/59805313.yaml
@@ -40,7 +40,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicRimfire-DP28-JP-R.png
+  image: VolcanicRimfire-LD10-EN-R-1E.png
 sets:
   en:
   - set_number: LD10-EN020
@@ -73,6 +73,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 924869
