--- a/data/cards/76922029.yaml
+++ b/data/cards/76922029.yaml
@@ -133,6 +133,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LART-DE044
+    set_name: The Lost Art Promotion 2023 A
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DB2-FR228
     set_name: Dark Beginning 2
@@ -193,6 +197,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LART-IT044
+    set_name: The Lost Art Promotion 2023 A
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SBTK-PT016
     set_name: 'Speed Duel: Trials of the Kingdom'
@@ -203,6 +211,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LART-PT044
+    set_name: The Lost Art Promotion 2023 A
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PH-29
     set_name: Pharaonic Guardian (Japanese)
