--- a/data/cards/81146288.yaml
+++ b/data/cards/81146288.yaml
@@ -66,7 +66,7 @@ sets:
     set_name: Premium Collection Tin
     rarities:
     - Secret Rare
-  - set_number: LC5D-EN095
+  - set_number: LC5D-FR095
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
