--- a/data/cards/83315222.yaml
+++ b/data/cards/83315222.yaml
@@ -38,7 +38,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerPromoter-DP28-JP-SR.png
+  image: BattlinBoxerPromoter-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN034
@@ -72,6 +72,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 903928
