--- a/data/cards/83533296.yaml
+++ b/data/cards/83533296.yaml
@@ -43,7 +43,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatCharge-DP28-JP-R.png
+  image: SalamangreatCharge-LD10-EN-R-1E.png
 sets:
   en:
   - set_number: LD10-EN006
@@ -76,6 +76,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934346
