--- a/data/cards/84138874.yaml
+++ b/data/cards/84138874.yaml
@@ -33,7 +33,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicInferno-DP28-JP-R.png
+  image: VolcanicInferno-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN024
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 924874
