--- a/data/cards/84755744.yaml
+++ b/data/cards/84755744.yaml
@@ -38,7 +38,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatTiger-DP28-JP-R.png
+  image: SalamangreatTiger-LD10-EN-UR-1E.png
 sets:
   en:
   - set_number: LD10-EN003
@@ -71,6 +71,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934345
