--- a/data/cards/85250352.yaml
+++ b/data/cards/85250352.yaml
@@ -34,7 +34,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicBlazeAccelerator-DP28-JP-SR.png
+  image: VolcanicBlazeAccelerator-LD10-EN-SR-1E.png
 sets:
   en:
   - set_number: LD10-EN021
@@ -68,6 +68,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 924871
