--- a/data/cards/yugipedia992718.yaml
+++ b/data/cards/yugipedia992718.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    While you control a "Memento" monster, your opponent's monsters that can attack must attack the "Memento" monster you control with the highest ATK (their choice, if tied). When your opponent activates a monster effect on the field: You can target 1 "Mementoral Tectolica, the Netherskull Dragon" you control; it loses exactly 1000 ATK/DEF, and if it does, negate that activated effect. You can only activate this effect of "Memento Cranium Burst" once per Chain.
+    While you control a "Memento" monster, your opponent's monsters that can attack must attack the "Memento" monster you control with the highest ATK (your choice, if tied). When your opponent activates a monster effect on the field: You can target 1 "Mementoral Tectolica, the Netherskull Dragon" you control; it loses exactly 1000 ATK/DEF, and if it does, negate that activated effect. You can only activate this effect of "Memento Cranium Burst" once per Chain.
   de:
   es:
   fr:
