--- a/data/cards/01073952.yaml
+++ b/data/cards/01073952.yaml
@@ -137,6 +137,9 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: DBVS-JP028
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: RGBT-KR048
     set_name: Raging Battle
