--- a/data/cards/07811875.yaml
+++ b/data/cards/07811875.yaml
@@ -89,6 +89,9 @@ sets:
     set_name: 'Structure Deck R: Dragunity Drive'
     rarities:
     - Common
+  - set_number: DBVS-JP030
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: STBL-KR067
     set_name: Starstrike Blast
