--- a/data/cards/yugipedia1003206.yaml
+++ b/data/cards/yugipedia1003206.yaml
@@ -32,7 +32,7 @@ attribute: LIGHT
 level: 12
 atk: 3500
 def: 2000
-materials: 1 Tuner + 1+ non-Tuner monsters
+materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Centurion
 images:
