--- a/rush.yaml
+++ b/rush.yaml
@@ -111954,6 +111954,8 @@ def: 0
 images:
 - index: 1
   image: TheStrangeSpecterofCelestialStarts-RDKP14-JP-SR.png
+- index: 2
+  image: TheStrangeSpecterofCelestialStarts-RDKP14-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP14-JP035
