--- a/data/cards/yugipedia992708.yaml
+++ b/data/cards/yugipedia992708.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase, if you control "Mementoral Tectolica, the Netherskull Dragon" (Quick Effect): You can discard this card; your opponent cannot target "Memento" monsters you control with card effects this turn. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, send up to 2 "Memento" cards with different names from each other from your Deck to the GY, except "Memento Goblin". You can only use each effect of "Memento Goblin" once per turn.
+    During the Main Phase, if you control "Mementoral Tecuhtlica, the Netherskull Dragon" (Quick Effect): You can discard this card; your opponent cannot target "Memento" monsters you control with card effects this turn. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, send up to 2 "Memento" cards with different names from each other from your Deck to the GY, except "Memento Goblin". You can only use each effect of "Memento Goblin" once per turn.
   de:
   es:
   fr:
