--- a/data/cards/46898368.yaml
+++ b/data/cards/46898368.yaml
@@ -35,7 +35,7 @@ text:
   ja: |-
     このカード名はルール上「サラマングレイト」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分は炎属性モンスターしか召喚・特殊召喚できない。①：相手フィールドのカードの数が自分フィールドのカードより多い場合、相手フィールドのＬモンスター１体を対象として発動できる。そのモンスターのリンクマーカーの数だけ、自分はドローする。
   ko: |-
-    이 카드명은 룰상 "샐러맨그레이트" 카드로도 취급한다. 이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드를 발동하는 턴에, 자신은 화염 속성 몬스터밖에 일반 소환 / 특수 소환할 수 없다. ①: 상대 필드의 카드의 수가 자신 필드의 카드보다 많을 경우, 상대 필드의 링크 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 링크 마커의 수만큼, 자신은 덱에서 드로우한다.
+    이 카드명은 룰상 "샐러맨그레이트" 카드로도 취급한다. 이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드를 발동하는 턴에, 자신은 화염 속성 몬스터밖에 일반 소환 / 특수 소환할 수 없다. ①: 상대 필드의 카드의 수가 자신 필드의 카드보다 많을 경우, 상대 필드의 링크 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 링크 마커의 수만큼, 자신은 드로우한다.
   zh-TW:
   zh-CN: |-
     此卡名在规则上也视为“转生炎兽”卡。此卡名的卡1回合仅可发动1张，发动此卡的回合中，自己仅可召唤・特殊召唤炎属性怪兽。①：对手场上的卡数量比自己场上的卡多的情况下，以对手场上的1只连接怪兽为对象可以发动。自己从牌组抽该怪兽连接标记数量的卡。
