--- a/data/cards/69750546.yaml
+++ b/data/cards/69750546.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが墓地へ送られた場合に発動する。相手に５００ダメージを与える。②：このカードが「ブレイズ・キャノン」カードの効果で墓地へ送られた場合、手札・デッキから「ヴォルカニック・バックショット」２体を墓地へ送って発動できる。相手フィールドのモンスターを全て破壊する。
   ko: |-
-    이 카드가 묘지로 보내졌을 때, 상대 라이프에 500 포인트 데미지를 준다. 이 카드가 "브레이즈 캐논"이라는 이름이 붙은 카드의 효과에 의해서 묘지로 보내졌을 경우, 패 / 덱에서 "볼캐닉 백샷" 2장을 묘지로 보내는 것으로, 상대 필드 위의 몬스터를 전부 파괴한다.
+    ①: 이 카드가 묘지로 보내졌을 경우에 발동한다. 상대에게 500 데미지를 준다. ②: 이 카드가 "브레이즈 캐논" 카드의 효과로 묘지로 보내졌을 경우, 패 / 덱에서 "볼캐닉 백샷" 2장을 묘지로 보내고 발동할 수 있다. 상대 필드의 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
     这张卡被送去墓地时，给与对方基本分500分伤害。这张卡被名字带有「烈焰加农炮」的卡的效果送去墓地的场合，可以通过从手卡·卡组把2只「火山鹿弹」送去墓地，对方场上的怪兽全部破坏。
