--- a/data/cards/05361647.yaml
+++ b/data/cards/05361647.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが攻撃対象に選択された場合に発動する。このカードを破壊する。②：このカードが効果で墓地へ送られた時、「ＢＫ グラスジョー」以外の自分の墓地の「ＢＫ」モンスター１体を対象として発動できる。そのモンスターを手札に加える。
   ko: |-
-    이 카드가 공격 대상으로 선택되었을 때, 이 카드를 파괴한다. 이 카드가 카드의 효과에 의해서 묘지로 보내졌을 때, 자신의 묘지에서 "BK(버닝나쿠라) 글라스조" 이외의 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 1장을 선택하고 패에 넣을 수 있다.
+    ①: 이 카드가 공격 대상으로 선택되었을 경우에 발동한다. 이 카드를 파괴한다. ②: 이 카드가 효과로 묘지로 보내졌을 때, "BK(버닝나쿠라) 글라스조" 이외의 자신 묘지의 "BK(버닝나쿠라)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW: |-
     此卡被选择为攻击对象时，破坏此卡。此卡因卡牌效果被送入墓地时，可从我方墓地选择1只除「燃燒拳鬥士 玻璃下巴」以外的冠有「燃燒拳鬥士」之名的怪兽加入手牌。
   zh-CN: |-
