--- a/data/cards/14812471.yaml
+++ b/data/cards/14812471.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＬ召喚した場合に発動できる。デッキから「転生炎獣の聖域」１枚を手札に加える。②：自分フィールドの「サラマングレイト」カードが戦闘・効果で破壊される場合、代わりに墓地のこのカードを除外できる。
   ko: |-
     레벨 4 이하의 사이버스족 몬스터 1장
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "샐러맨그레이트 성역" 1장을 패에 넣는다. ②: 자신 필드의 "샐러맨그레이트" 카드가 전투 / 효과로 파괴될 경우, 대신에 묘지의 이 카드를 제외할 수 있다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 링크 소환했을 경우에 발동할 수 있다. 덱에서 "샐러맨그레이트 성역" 1장을 패에 넣는다. ②: 자신 필드의 "샐러맨그레이트" 카드가 전투 / 효과로 파괴될 경우, 대신에 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN: |-
     等级4以下的电子界族怪兽1只
