--- a/data/cards/32543380.yaml
+++ b/data/cards/32543380.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードは通常召喚できない。自分フィールドの表側表示の「ブレイズ・キャノン－トライデント」１枚を墓地へ送った場合に特殊召喚できる。①：相手バトルフェイズ中、攻撃可能な相手の攻撃表示モンスターはこのカードを攻撃しなければならない。②：このカードが戦闘でモンスターを破壊し墓地へ送った場合に発動する。相手フィールドのモンスターを全て破壊し、破壊した数×５００ダメージを相手に与える。
   ko: |-
-    이 카드는 일반 소환 / 세트할 수 없다. 자신 필드 위에 앞면 표시로 존재하는 "브레이즈 캐논－트라이든트" 1장을 묘지로 보냈을 경우에 특수 소환할 수 있다. 상대의 배틀 페이즈 중, 상대 필드 위에 몬스터가 공격 표시로 존재할 경우, 상대는 이 카드에 공격을 해야 한다. 이 카드가 전투에 의해서 몬스터를 파괴하고 묘지로 보냈을 때, 상대 필드 위의 몬스터를 전부 파괴하고, 파괴한 몬스터의 수 × 500 포인트 데미지를 상대 라이프에 준다.
+    이 카드는 통상 소환할 수 없다. 자신 필드의 앞면 표시의 "브레이즈 캐논－트라이든트" 1장을 묘지로 보냈을 경우에 특수 소환할 수 있다. ①: 상대 배틀 페이즈 중, 공격 가능한 상대의 공격 표시 몬스터는 이 카드를 공격해야 한다. ②: 이 카드가 전투로 몬스터를 파괴하고 묘지로 보냈을 경우에 발동한다. 상대 필드의 몬스터를 전부 파괴하고, 파괴한 수 × 500 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
     这张卡不能通常召唤。把自己场上表侧表示存在的「烈焰加农炮-三叉戟式」送去墓地的场合可以特殊召唤。对方的战斗阶段中，对方场上有怪兽攻击表示存在的场合，对方必须向这张卡作出攻击。这张卡战斗破坏怪兽送去墓地时，对方场上的怪兽全部破坏，给与对方基本分破坏的怪兽数量×500的数值的伤害。
