--- a/data/cards/36916401.yaml
+++ b/data/cards/36916401.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキの一番上のカードを墓地へ送り、自分の墓地の「ＢＫ」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
-    덱의 맨 위의 카드를 묘지로 보내고 발동할 수 있다. 자신 묘지의 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 1장을 선택하고 앞면 수비 표시로 특수 소환한다. "버닝나클 스피릿"은 1턴에 1장밖에 발동할 수 없다.
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱 맨 위의 카드를 묘지로 보내고, 자신 묘지의 "BK(버닝나쿠라)" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     把卡组最上面的卡送去墓地才能发动。选择自己墓地1只名字带有「燃烧拳击手」的怪兽表侧守备表示特殊召唤。「燃烧拳魂」在1回合只能发动1张。
