--- a/data/cards/41463181.yaml
+++ b/data/cards/41463181.yaml
@@ -37,7 +37,7 @@ text:
     ①：このカードがＬ召喚した場合、相手の魔法＆罠ゾーンのカード１枚を対象として発動できる。そのカードをデッキに戻す。②：このカードが「転生炎獣ヒートライオ」を素材としてＬ召喚されている場合、１ターンに１度、フィールドの表側表示モンスター１体と、自分の墓地のモンスター１体を対象として発動できる。対象のフィールドのモンスターの攻撃力はターン終了時まで、対象の墓地のモンスターの攻撃力と同じになる。
   ko: |-
     화염 속성 효과 몬스터 2장 이상
-    ①: 이 카드가 링크 소환에 성공했을 경우, 상대의 마법 & 함정 존의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 덱으로 되돌린다. ②: 이 카드가 "샐러맨그레이트 히트라이오"를 소재로서 링크 소환되어 있을 경우, 1턴에 1번, 필드의 앞면 표시 몬스터 1장과, 자신 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 대상 필드의 몬스터의 공격력은, 턴 종료시까지 대상 묘지의 몬스터의 공격력과 같아진다.
+    ①: 이 카드를 링크 소환했을 경우, 상대의 마법 & 함정 존의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 덱으로 되돌린다. ②: 이 카드가 "샐러맨그레이트 히트라이오"를 소재로서 링크 소환되어 있을 경우, 1턴에 1번, 필드의 앞면 표시 몬스터 1장과, 자신 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 대상 필드의 몬스터의 공격력은 턴 종료시까지, 대상 묘지의 몬스터의 공격력과 같아진다.
   zh-TW:
   zh-CN: |-
     炎属性效果怪兽2只以上
