--- a/data/cards/63014935.yaml
+++ b/data/cards/63014935.yaml
@@ -28,7 +28,7 @@ text:
   ja: |-
     このカードは通常召喚できない。相手フィールドのモンスター１体をリリースした場合に相手フィールドに特殊召喚できる。このカードを特殊召喚するターン、自分は通常召喚できない。①：１ターンに１度、自分フィールドの他のカード１枚を墓地へ送って発動できる。相手に１０００ダメージを与える。②：自分エンドフェイズに発動する。自分フィールドの他のモンスター１体をリリースするか、自分は１０００ダメージを受ける。
   ko: |-
-    이 카드는 일반 소환/세트할 수 없다. 상대 필드 위에 존재하는 몬스터 1장을 릴리스하고, 패에서 상대 필드 위에 특수 소환한다. 1턴에 1번, 자신 필드 위에 존재하는 이 카드 이외의 카드 1장을 묘지로 보내는 것으로, 상대 라이프에 1000 포인트 데미지를 준다. 또한, 자신의 엔드 페이즈시에 이 카드 이외의 몬스터 1장을 릴리스하거나, 1000 포인트 데미지를 받는다. 이 카드를 특수 소환하는 턴에 자신은 일반 소환/세트를 할 수 없다.
+    이 카드는 통상 소환할 수 없다. 상대 필드의 몬스터 1장을 릴리스했을 경우에 상대 필드에 특수 소환할 수 있다. 이 카드를 특수 소환하는 턴에, 자신은 통상 소환할 수 없다. ①: 1턴에 1번, 자신 필드의 다른 카드 1장을 묘지로 보내고 발동할 수 있다. 상대에게 1000 데미지를 준다. ②: 자신 엔드 페이즈에 발동한다. 자신 필드의 다른 몬스터 1장을 릴리스하거나, 자신은 1000 데미지를 받는다.
   zh-TW:
   zh-CN: |-
     这张卡不能通常召唤。可以把对方场上1只怪兽解放，从手卡往对方场上特殊召唤。1回合1次，可以通过把这张卡以外的自己场上1张卡送去墓地，给与对方基本分1000分伤害。此外，自己的结束阶段时把这张卡以外的自己场上1只怪兽解放或自己受到1000分伤害。这张卡特殊召唤的回合，自己不能通常召唤。
