--- a/data/cards/68144350.yaml
+++ b/data/cards/68144350.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードの効果を発動するターン、自分は「ＢＫ」モンスターしか特殊召喚できない。①：このカードが召喚した時、自分の墓地の「ＢＫ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
-    이 카드가 일반 소환에 성공했을 때, 자신 묘지의 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 1장을 선택하고 특수 소환할 수 있다. 이 효과를 발동하는 턴에, 자신은 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 이외의 몬스터를 특수 소환할 수 없다.
+    이 카드의 효과를 발동하는 턴에, 자신은 "BK(버닝나쿠라)" 몬스터밖에 특수 소환할 수 없다. ①: 이 카드를 일반 소환했을 때, 자신 묘지의 "BK(버닝나쿠라)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW: |-
     此卡召唤成功时，可从我方墓地选择1只冠有「燃燒拳鬥士」之名的怪兽特殊召唤。此效果发动的回合，我方不可特殊召唤除冠有「燃燒拳鬥士」之名怪兽以外的怪兽。
   zh-CN: |-
