--- a/data/cards/69537999.yaml
+++ b/data/cards/69537999.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：相手フィールドのモンスター１体を対象としてこの効果を発動できる（この効果を発動するターン、自分のモンスターは攻撃できない）。手札から攻撃力５００以下の炎族モンスター１体を墓地へ送り、対象の相手モンスターを破壊する。
   ko: |-
-    자신의 메인 페이즈시에 상대 필드 위의 몬스터 1장을 선택하고 발동할 수 있다. 패에서 공격력 500 이하의 화염족 몬스터 1장을 묘지로 보내고, 선택한 상대 몬스터를 파괴한다. 이 효과를 발동하는 턴에, 자신의 몬스터는 공격할 수 없다.
+    ①: 상대 필드의 몬스터 1장을 대상으로 하고 이 효과를 발동할 수 있다(이 효과를 발동하는 턴에, 자신 몬스터는 공격할 수 없다). 패에서 공격력 500 이하의 화염족 몬스터 1장을 묘지로 보내고, 대상의 상대 몬스터를 파괴한다.
   zh-TW: |-
     可于我方主要阶段时选择对手场上的1只怪兽并发动。从手牌将1只攻击力500或以下的炎族怪兽送入墓地，破坏被选择的对手怪兽。此效果发动的回合，我方的怪兽不可攻击。
   zh-CN: |-
