--- a/data/cards/76459806.yaml
+++ b/data/cards/76459806.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが召喚・反転召喚・特殊召喚した時に発動できる。自分のデッキ・墓地から「ブレイズ・キャノン」カード１枚を手札に加える。
   ko: |-
-    이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 때, 자신의 덱 / 묘지에서 "브레이즈 캐논"이라는 이름이 붙은 카드 1장을 고르고 패에 넣을 수 있다.
+    ①: 이 카드를 일반 소환 / 반전 소환 / 특수 소환했을 때에 발동할 수 있다. 자신의 덱 / 묘지에서 "브레이즈 캐논" 카드 1장을 패에 넣는다.
   zh-TW: |-
     此卡召唤、反转召唤、特殊召唤成功时，可从我方牌组、墓地挑选1张冠有「烈焰加農砲」之名的卡牌加入手牌。
   zh-CN: |-
