--- a/data/cards/79867938.yaml
+++ b/data/cards/79867938.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが召喚した時に発動できる。デッキから「ＢＫ」モンスター１体を墓地へ送る。②：攻撃表示のこのカードは１ターンに１度だけ戦闘では破壊されない。
   ko: |-
-    이 카드가 일반 소환에 성공했을 때, 덱에서 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 1장을 묘지로 보낼 수 있다. 필드 위에 앞면 공격 표시로 존재하는 이 카드는, 1턴에 1번만 전투로는 파괴되지 않는다.
+    ①: 이 카드를 일반 소환했을 때에 발동할 수 있다. 덱에서 "BK(버닝나쿠라)" 몬스터 1장을 묘지로 보낸다. ②: 공격 표시의 이 카드는 1턴에 1번만 전투로는 파괴되지 않는다.
   zh-TW: |-
     此卡召唤成功时，可从牌组将1只冠有「燃燒拳鬥士」之名的怪兽送入墓地。场上以表侧攻击表示存在的此卡，仅1回合1次不会因战斗而破坏。
   zh-CN: |-
