--- a/data/cards/87327776.yaml
+++ b/data/cards/87327776.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除いて発動できる。デッキから「サラマングレイト」モンスター１体を守備表示で特殊召喚する。この効果の発動後、ターン終了時まで自分は炎属性以外のモンスターの効果を発動できない。②：Ｘ召喚したこのカードが「サラマングレイト」ＬモンスターのＬ素材として墓地へ送られた場合、フィールドのモンスター１体を対象として発動できる。そのモンスターを手札に戻す。
   ko: |-
     레벨 3 몬스터 × 2
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 "샐러맨그레이트" 몬스터 1장을 수비 표시로 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 화염 속성 이외의 몬스터 효과를 발동할 수 없다. ②: 엑시즈 소환한 이 카드가 "샐러맨그레이트" 링크 몬스터의 링크 소재로서 묘지로 보내졌을 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 "샐러맨그레이트" 몬스터 1장을 수비 표시로 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 화염 속성 이외의 몬스터 효과를 발동할 수 없다. ②: 엑시즈 소환한 이 카드가 "샐러맨그레이트" 링크 몬스터의 링크 소재로서 묘지로 보내졌을 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패로 되돌린다.
   zh-TW:
   zh-CN: |-
     等级3怪兽×2
