--- a/data/cards/87871125.yaml
+++ b/data/cards/87871125.yaml
@@ -36,8 +36,8 @@ text:
     炎属性の効果モンスター２体
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのリンク先にモンスターが召喚・特殊召喚された場合に発動できる。自分の墓地から炎属性モンスター１体を手札に加える。このターン、自分はこの効果で手札に加えたモンスター及びその同名モンスターを通常召喚・特殊召喚できない。②：このカードが「転生炎獣サンライトウルフ」を素材としてＬ召喚されている場合に発動できる。自分の墓地から「サラマングレイト」魔法・罠カード１枚を手札に加える。
   ko: |-
-    화염 속성의 효과 몬스터 2장
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 링크 앞에 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 자신 묘지에서 화염 속성 몬스터 1장을 골라 패에 넣는다. 이 턴에, 자신은 이 효과로 패에 넣은 몬스터 및 그와 같은 이름의 몬스터를 통상 소환 / 특수 소환할 수 없다. ②: 이 카드가 "샐러맨그레이트 썬라이트울프"를 소재로서 링크 소환되어 있을 경우에 발동할 수 있다. 자신 묘지의 "샐러맨그레이트" 마법 / 함정 카드 1장을 골라 패에 넣는다.
+    화염 속성 효과 몬스터 2장
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 링크 앞에 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 자신 묘지에서 화염 속성 몬스터 1장을 패에 넣는다. 이 턴에, 자신은 이 효과로 패에 넣은 몬스터 및 그와 같은 이름의 몬스터를 통상 소환 / 특수 소환할 수 없다. ②: 이 카드가 "샐러맨그레이트 썬라이트울프"를 소재로서 링크 소환되어 있을 경우에 발동할 수 있다. 자신 묘지에서 "샐러맨그레이트" 마법 / 함정 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     炎属性的效果怪兽2只
