--- a/data/rush/19267.yaml
+++ b/data/rush/19267.yaml
@@ -33,7 +33,7 @@ atk: 1300
 def: 1000
 images:
 - index: 1
-  image: Fireyarou-RDB232-JP-OP.png
+  image: Fireyarou-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/B232-JP006
