--- a/data/cards/05318639.yaml
+++ b/data/cards/05318639.yaml
@@ -469,7 +469,7 @@ sets:
     rarities:
     - Ultra Rare
   fr:
-  - set_number: SDM-F047
+  - set_number: MDM-F047
     set_name: Spell Ruler
     rarities:
     - Ultra Rare
