--- a/data/cards/75902998.yaml
+++ b/data/cards/75902998.yaml
@@ -60,7 +60,7 @@ sets:
     rarities:
     - Common
   fr:
-  - set_number: MIL1-DE022
+  - set_number: MIL1-FR022
     set_name: Millennium Pack
     rarities:
     - Super Rare
