--- a/data/cards/87567063.yaml
+++ b/data/cards/87567063.yaml
@@ -50,7 +50,7 @@ sets:
     rarities:
     - Ultra Rare
   fr:
-  - set_number: MIL1-DE013
+  - set_number: MIL1-FR013
     set_name: Millennium Pack
     rarities:
     - Ultra Rare
