--- a/data/cards/05128859.yaml
+++ b/data/cards/05128859.yaml
@@ -99,7 +99,7 @@ sets:
     rarities:
     - Normal Parallel Rare
   ko:
-  - set_number: TAEV-KRP041
+  - set_number: TAEV-KR041
     set_name: Tactical Evolution
     rarities:
     - Rare
