--- a/data/cards/06368038.yaml
+++ b/data/cards/06368038.yaml
@@ -320,6 +320,10 @@ sets:
     set_name: Yu-Gi-Oh! Championship Series Japan 2023 prize card
     rarities:
     - Ultra Rare
+  - set_number: 23YA-JP001
+    set_name: Area Championship 2023 prize card
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: LOB-K006
     set_name: Legend of Blue Eyes White Dragon
