--- a/data/cards/17885118.yaml
+++ b/data/cards/17885118.yaml
@@ -118,6 +118,11 @@ sets:
     set_name: Dimension Force
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP7-SC109
+    set_name: Mega Pack 07
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
