--- a/data/cards/21597117.yaml
+++ b/data/cards/21597117.yaml
@@ -219,7 +219,7 @@ sets:
     set_name: Invasion of Chaos
     rarities:
     - Common
-  - set_number: ST14-JP036
+  - set_number: ST14-KR036
     set_name: Starter Deck 2014
     rarities:
     - Common
