--- a/data/cards/27243130.yaml
+++ b/data/cards/27243130.yaml
@@ -298,6 +298,10 @@ sets:
     - Common
     - Gold Rare
     - Gold Secret Rare
+  - set_number: SP02-TC044
+    set_name: Starter Pack Volume 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: ST20-SC028
     set_name: Starter Deck 2020
