--- a/data/cards/31000575.yaml
+++ b/data/cards/31000575.yaml
@@ -104,6 +104,10 @@ sets:
     set_name: Cybernetic Revolution
     rarities:
     - Common
+  - set_number: WGRT-PT085
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Common
   - set_number: SBLS-PT024
     set_name: 'Speed Duel: Arena of Lost Souls'
     rarities:
