--- a/data/cards/44682448.yaml
+++ b/data/cards/44682448.yaml
@@ -89,6 +89,10 @@ sets:
     set_name: Cosmo Blazer
     rarities:
     - Common
+  - set_number: WGRT-PT055
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Common
   ja:
   - set_number: CBLZ-JP019
     set_name: Cosmo Blazer
