--- a/data/cards/47453433.yaml
+++ b/data/cards/47453433.yaml
@@ -104,6 +104,10 @@ sets:
     set_name: Rise of Destiny
     rarities:
     - Common
+  - set_number: WGRT-PT072
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Super Rare
   ja:
   - set_number: RDS-JP044
     set_name: Rise of Destiny
