--- a/data/cards/61132951.yaml
+++ b/data/cards/61132951.yaml
@@ -88,7 +88,7 @@ sets:
     rarities:
     - Common
   pt:
-  - set_number: WGRT-IT054
+  - set_number: WGRT-PT054
     set_name: War of the Giants Reinforcements
     rarities:
     - Common
