--- a/data/cards/65169794.yaml
+++ b/data/cards/65169794.yaml
@@ -249,6 +249,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: YSYR-PT027
+    set_name: 'Starter Deck: Yugi Reloaded'
+    rarities:
+    - Common
   - set_number: WGRT-PT068
     set_name: War of the Giants Reinforcements
     rarities:
