--- a/data/cards/67049542.yaml
+++ b/data/cards/67049542.yaml
@@ -61,7 +61,7 @@ sets:
     rarities:
     - Common
   de:
-  - set_number: PSV-DE058
+  - set_number: PSV-G058
     set_name: Pharaoh's Servant
     rarities:
     - Common
