--- a/data/cards/77542832.yaml
+++ b/data/cards/77542832.yaml
@@ -94,6 +94,10 @@ sets:
     set_name: 'Hidden Arsenal 7: Knight of Stars'
     rarities:
     - Super Rare
+  - set_number: WGRT-PT001
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Common
   ja:
   - set_number: DT13-JP024
     set_name: Duel Terminal - Sacred Star Knights!!
