--- a/data/cards/83039729.yaml
+++ b/data/cards/83039729.yaml
@@ -218,6 +218,10 @@ sets:
     set_name: Extra Pack
     rarities:
     - Ultra Rare
+  - set_number: PR02-KR019
+    set_name: Promotion Pack 2012 Vol.2
+    rarities:
+    - Common
   - set_number: DBSW-KR009
     set_name: 'Deck Build Pack: Spirit Warriors'
     rarities:
