--- a/data/cards/83274244.yaml
+++ b/data/cards/83274244.yaml
@@ -111,6 +111,15 @@ sets:
     set_name: Zexal Collection Tin
     rarities:
     - Super Rare
+  - set_number: WGRT-PT059
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Super Rare
+  - set_number: SP14-PT018
+    set_name: Star Pack 2014
+    rarities:
+    - Common
+    - Starfoil Rare
   ja:
   - set_number: DP12-JP011
     set_name: 'Duelist Pack: Yuma'
