--- a/data/cards/90140980.yaml
+++ b/data/cards/90140980.yaml
@@ -113,7 +113,7 @@ sets:
     - Common
     - Secret Rare
   it:
-  - set_number: SOD-SP034
+  - set_number: SOD-IT034
     set_name: Soul of the Duelist
     rarities:
     - Rare
