--- a/data/cards/90669991.yaml
+++ b/data/cards/90669991.yaml
@@ -88,6 +88,10 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
+  - set_number: WGRT-PT082
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Common
   ja:
   - set_number: 302-045
     set_name: Advent of Union
