--- a/data/cards/91862578.yaml
+++ b/data/cards/91862578.yaml
@@ -80,7 +80,7 @@ sets:
     rarities:
     - Common
   pt:
-  - set_number: SOD-EN031
+  - set_number: SOD-PT031
     set_name: Soul of the Duelist
     rarities:
     - Common
