--- a/data/cards/94156050.yaml
+++ b/data/cards/94156050.yaml
@@ -84,6 +84,10 @@ sets:
     set_name: Judgment of the Light
     rarities:
     - Common
+  - set_number: WGRT-PT098
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Common
   ja:
   - set_number: JOTL-JP070
     set_name: Judgment of the Light
