--- a/data/cards/98299011.yaml
+++ b/data/cards/98299011.yaml
@@ -103,7 +103,7 @@ sets:
     set_name: Pharaoh's Servant
     rarities:
     - Short Print
-  - set_number: SKE-IR044
+  - set_number: SKE-IT044
     set_name: 'Starter Deck: Kaiba Evolution'
     rarities:
     - Common
