--- a/data/cards/56830749.yaml
+++ b/data/cards/56830749.yaml
@@ -148,6 +148,10 @@ sets:
     set_name: Metal Raiders
     rarities:
     - Common
+  - set_number: WGRT-PT066
+    set_name: War of the Giants Reinforcements
+    rarities:
+    - Super Rare
   - set_number: SBTK-PT032
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
