--- a/data/cards/79850798.yaml
+++ b/data/cards/79850798.yaml
@@ -106,6 +106,11 @@ sets:
     set_name: Number Hunters
     rarities:
     - Super Rare
+  - set_number: SP14-PT015
+    set_name: Star Pack 2014
+    rarities:
+    - Common
+    - Starfoil Rare
   ja:
   - set_number: GAOV-JP016
     set_name: Galactic Overlord
