--- a/data/cards/81480460.yaml
+++ b/data/cards/81480460.yaml
@@ -176,7 +176,7 @@ sets:
     rarities:
     - Ultra Rare
   fr:
-  - set_number: MRD-E126
+  - set_number: MRD-F126
     set_name: Metal Raiders
     rarities:
     - Ultra Rare
