--- a/data/rush/15216.yaml
+++ b/data/rush/15216.yaml
@@ -38,7 +38,7 @@ atk: 1500
 def: 1100
 images:
 - index: 1
-  image: FaithBird-RDSBD3-JP-C.png
+  image: FaithBird-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP012
