--- a/data/rush/17589.yaml
+++ b/data/rush/17589.yaml
@@ -36,7 +36,7 @@ series:
 - Jointech
 images:
 - index: 1
-  image: JointechAce-RDSD02-JP-C.png
+  image: JointechAce-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/GRD2-JP010
