--- a/data/rush/17721.yaml
+++ b/data/rush/17721.yaml
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TradeIn-RDMRP1-JP-R.png
+  image: TradeIn-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP096
