--- a/data/rush/18365.yaml
+++ b/data/rush/18365.yaml
@@ -50,7 +50,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieRam-RDORP1-JP-C.png
+  image: ExcutieRam-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP036
