--- a/rush.yaml
+++ b/rush.yaml
@@ -4810,7 +4810,7 @@ atk: 1500
 def: 1100
 images:
 - index: 1
-  image: FaithBird-RDSBD3-JP-C.png
+  image: FaithBird-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP012
@@ -59953,7 +59953,7 @@ series:
 - Chameleon
 images:
 - index: 1
-  image: UnknownFlyleon-RDSJMP-JP-NPR.png
+  image: UnknownFlyleon-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/SJMP-JP013
@@ -67017,7 +67017,7 @@ series:
 - Jointech
 images:
 - index: 1
-  image: JointechAce-RDSD02-JP-C.png
+  image: JointechAce-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/GRD2-JP010
@@ -71518,7 +71518,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TradeIn-RDMRP1-JP-R.png
+  image: TradeIn-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP096
@@ -88111,7 +88111,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieRam-RDORP1-JP-C.png
+  image: ExcutieRam-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP036
@@ -93619,7 +93619,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: MeleltheBeautifulFlameSpiritoftheLamp-RDKP12-JP-C.png
+  image: MeleltheBeautifulFlameSpiritoftheLamp-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP031
@@ -99043,7 +99043,7 @@ atk: 700
 def: 300
 images:
 - index: 1
-  image: MalevolentSeller-RDLGP1-JP-C.png
+  image: MalevolentSeller-RDB232-JP-C.png
 sets:
   ja:
   - set_number: RD/LGP1-JP040
