--- a/data/cards/09929398.yaml
+++ b/data/cards/09929398.yaml
@@ -8,7 +8,7 @@ name:
   it: Alanera - Gofu l'Ombra Vaga
   pt: Asanegra - Gofu, a Sombra Oscilante
   ja: <ruby>ＢＦ<rt>ブラックフェザー</rt></ruby>－<ruby>朧<rt>おぼろ</rt></ruby><ruby>影<rt>かげ</rt></ruby>のゴウフウ
-  ja_romaji: Burakku Fezā - Oborokage no Gōfū
+  ja_romaji: Burakku Fezā - Oborokage no Goufuu
   ko: <ruby>BF<rt>블랙 페더</rt></ruby>－농그림자의 고우후우
   ko_rr:
   zh-TW:
