--- a/data/rush/18592.yaml
+++ b/data/rush/18592.yaml
@@ -53,6 +53,8 @@ series:
 images:
 - index: 1
   image: MachviooftheUltimateAria-RDKP12-JP-SR.png
+- index: 2
+  image: MachviooftheUltimateAria-RDBDG4-JP-UPR.png
 sets:
   ja:
   - set_number: RD/KP12-JP010
